<resources>
    <string name="app_name">DateTime</string>
    <string name="date_hint">Дата</string>
    <string name="time_hint">Время</string>
    <string name="timer_title">Timer</string>
    <string name="start_button">start</string>
    <string name="timer_time">00</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone">Телефон</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="save">Сохранить</string>
    <string name="exit">Exit</string>
</resources>