<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/setImageIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="ContentDescription"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/setImageIV"
        tools:layout_editor_absoluteX="16dp">


        <EditText
            android:id="@+id/lastNameET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/lastname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/dateET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/birthday"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>